kuber/go-docker-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-docker-liveness
spec:
  containers:
    - image: vchilikov/go-docker
      name: go-docker
      livenessProbe:
        initialDelaySeconds: 10
        periodSeconds: 5
        httpGet:
          port: 9000
          path: /health
