kuber/go-docker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-docker
spec:
  ports:
    - port: 80
      targetPort: 9000
  selector:
    app: go-docker
