kuber/go-docker-svcloadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-docker-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9000
  selector:
    app: go-docker
