kuber/go-dockersvcnodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-docker-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 30123
  selector:
    app: go-docker
